--- a/public/style.css
+++ b/public/style.css
@@ -540,6 +540,11 @@ video {
   margin-right: auto;
 }
 
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 .mt-16 {
   margin-top: 4rem;
 }
@@ -632,6 +637,10 @@ video {
   height: 100%;
 }
 
+.h-\[90\%\] {
+  height: 90%;
+}
+
 .max-h-\[400px\] {
   max-height: 400px;
 }
@@ -646,6 +655,10 @@ video {
 
 .w-\[85\%\] {
   width: 85%;
+}
+
+.w-\[90\%\] {
+  width: 90%;
 }
 
 .max-w-7xl {
